# haskell-blockchain

./: .gitignore  CHANGELOG.md  Makefile  README.md  haskell-blockchain.cabal  stack.yaml
app/: Main.hs
src/: AppTypes.hs  Blockchain.hs  Database.hs  TestEnvVars.hs  UserModel.hs  Web.hs  WebUserRoutes.hs
