cabal-version:       2.2

name:                haskell-blockchain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/darren277/haskell-blockchain#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Darren MacKenzie
maintainer:          darren277@yahoo.com
copyright:           2024 Darren MacKenzie
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:     Blockchain
  hs-source-dirs:      src
  build-depends:       base >= 4.0 && < 5,
                       time >= 1.9 && < 2,
                       crypton >= 0.2 && < 1,
                       bytestring >= 0.10 && < 1,
                       http-types,
                       Spock,
                       Spock-core,
                       aeson,
                       postgresql-simple >= 0.6,
                       postgresql-simple-migration >= 0.1,
                       containers,
                       text,
                       envy,
                       resource-pool
  default-language:    Haskell2010

executable haskell-blockchain
  hs-source-dirs:      app, src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5,
                       haskell-blockchain,
                       time >= 1.9 && < 2,
                       crypton >= 0.2 && < 1,
                       bytestring >= 0.10 && < 1,
                       http-types,
                       Spock,
                       Spock-core,
                       aeson,
                       postgresql-simple >= 0.6,
                       postgresql-simple-migration >= 0.1,
                       containers,
                       text,
                       envy,
                       resource-pool
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
